# CosmicReseller

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: create_fb_profile.py
src/cosmicreseller/: logger.py  main.py  pricing.py  telegram_bot.py
src/cosmicreseller/scrapers/: ebay.py  facebook.py
src/cosmicreseller/webui/: __init__.py  routes.py
src/cosmicreseller/webui/static/: style.css
src/cosmicreseller/webui/templates/: index.html
tests/: test_pricing.py
tests/scrapers/: test_ebay.py  test_facebook.py
tests/webui/: test_routes.py
