[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmicreseller"
version = "0.1.0"
description = "Scraper + Telegram bot + Web UI for finding underpriced items on Facebook Marketplace and eBay."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Benyamin Amini", email = "cosmicdeveloper.b@gmail.com" }
]

# Runtime deps used in your codebase
dependencies = [
  "playwright>=1.45.0",
  "python-telegram-bot>=20.0",
  "aiohttp>=3.9.0",
  "python-dotenv>=1.0.0",
  "telegram-text==0.2.0",
  "quart>=0.19.0",
  "hypercorn>=0.16.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  # Testing
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  # Formatting
  "black>=24.0",
  "isort>=5.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cosmicreseller = ["py.typed"]

# ---- Tooling ----

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers --cov=src --cov-report=term-missing"


[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
